# mujoco_ros

./: README.md
mujoco_sim_pkg/: CMakeLists.txt  package.xml
mujoco_sim_pkg/scripts/: breathe.py  breathe_comp.py  ur5_simulation.py
mujoco_sim_pkg/src/: breathe.py  ur5_simulation.py
ur5e_description/: CMakeLists.txt  package.xml
ur5e_description/config/ur5e/: visual_parameters.yaml
ur5e_description/launch/: load_ur5e.launch  view_ur5e.launch
ur5e_description/urdf/: ur.xacro  ur5e.xacro
ur5e_description/urdf/inc/: ur5e_macro.xacro  ur_macro.xacro
ur5e_hardware_interface/: CMakeLists.txt  package.xml
ur5e_hardware_interface/src/: ur5e_hardware_interface.cpp  ur5e_hardware_interface_node.cpp
ur5e_moveit_mj/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_moveit_mj/config/: fake_controllers.yaml  gazebo_ur5e_robot.urdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml  ur5e_robot.srdf
ur5e_moveit_mj/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ur5e_mujoco_bringup/: CMakeLists.txt  package.xml
ur5e_mujoco_bringup/config/: joint_names.yaml  ur5e_controllers.yaml
ur5e_mujoco_bringup/launch/: ur5_mujoco.launch  ur5e.launch
(+2 files in other folders)
